# testar_conexao_internet

./: .gitignore  Cargo.toml  README.md  config.ini
src/: main.rs
